# celes

./: .coverage  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  pyproject.toml  read_parquet.py  requirements.txt  test.csv
.github/workflows/: check-pr.yml
app/: main.py
app/middleware/: auth.py
app/services/: employee_service.py  product_service.py  store_service.py
app/tests/: conftest.py
app/tests/api/: test_employee.py  test_product.py  test_store.py
app/utils/: utils.py
web/: index.html
