[tool.poetry]
name = "test"
version = "0.1.0"
description = ""
authors = []
readme = "README.md"
package-mode = false

[tool.poetry.dev-dependencies]
isort = "^5.13.2"
black = "^24.3.0"
flake8 = "^7.0.0"
pytest = "^8.1.1"
coverage = "^6.3.2"
pre-commit = "^3.6.2"
gitlint = "^0.19.1"

[tool.poetry.dependencies]
python = "^3.12"

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 120

[tool.mypy]
disallow_untyped_defs = true
show_error_context = true
warn_return_any = true

[tool.black]
line-length = 120


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
